--- a/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
+++ b/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                         </userGuides>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background image" translatesAutoresizingMaskIntoConstraints="NO" id="aQ7-zq-nMy">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Onb-IK-pcj">
                                 <rect key="frame" x="0.0" y="94" width="414" height="768"/>
@@ -36,16 +36,15 @@
                                             <view contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="09e-9k-xMm">
                                                 <rect key="frame" x="16" y="8" width="382" height="228"/>
                                                 <subviews>
-                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="applogo" translatesAutoresizingMaskIntoConstraints="NO" id="RaT-Yj-Q9w">
-                                                        <rect key="frame" x="86" y="20" width="210" height="188"/>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ajitelogo" translatesAutoresizingMaskIntoConstraints="NO" id="RaT-Yj-Q9w">
+                                                        <rect key="frame" x="91" y="50" width="200" height="168"/>
                                                     </imageView>
                                                 </subviews>
-                                                <color key="backgroundColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstItem="RaT-Yj-Q9w" firstAttribute="centerX" secondItem="09e-9k-xMm" secondAttribute="centerX" id="Ipz-LL-1Dd"/>
-                                                    <constraint firstItem="RaT-Yj-Q9w" firstAttribute="top" secondItem="09e-9k-xMm" secondAttribute="top" constant="20" id="XPe-vY-hoZ"/>
-                                                    <constraint firstItem="RaT-Yj-Q9w" firstAttribute="centerY" secondItem="09e-9k-xMm" secondAttribute="centerY" id="c0t-pF-MZU"/>
-                                                    <constraint firstAttribute="bottom" secondItem="RaT-Yj-Q9w" secondAttribute="bottom" constant="20" id="e4o-BB-imZ"/>
+                                                    <constraint firstAttribute="bottom" secondItem="RaT-Yj-Q9w" secondAttribute="bottom" constant="10" id="ZNK-eu-nJG"/>
+                                                    <constraint firstItem="RaT-Yj-Q9w" firstAttribute="top" secondItem="09e-9k-xMm" secondAttribute="top" constant="50" id="qYP-7C-CDF"/>
                                                 </constraints>
                                             </view>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="wTi-cO-ggV">
@@ -95,9 +94,9 @@
                         <constraints>
                             <constraint firstItem="Onb-IK-pcj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="D2g-n3-aou"/>
                             <constraint firstItem="aQ7-zq-nMy" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Rr3-tM-kPQ"/>
-                            <constraint firstItem="aQ7-zq-nMy" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="WIo-CQ-NNz"/>
+                            <constraint firstItem="aQ7-zq-nMy" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="-44" id="WIo-CQ-NNz"/>
                             <constraint firstItem="Onb-IK-pcj" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="WJu-7p-4Do"/>
-                            <constraint firstItem="aQ7-zq-nMy" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Wfc-a1-cRt"/>
+                            <constraint firstItem="aQ7-zq-nMy" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" constant="34" id="Wfc-a1-cRt"/>
                             <constraint firstItem="aQ7-zq-nMy" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="eXF-7t-rz1"/>
                             <constraint firstItem="Onb-IK-pcj" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="r03-uL-QKW"/>
                             <constraint firstItem="Onb-IK-pcj" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="yYq-Vw-h4b"/>
@@ -1027,13 +1026,13 @@
                                                                 </button>
                                                             </subviews>
                                                         </stackView>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" alignment="center" spacing="22" translatesAutoresizingMaskIntoConstraints="NO" id="jul-av-s0k">
+                                                        <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="22" translatesAutoresizingMaskIntoConstraints="NO" id="jul-av-s0k">
                                                             <rect key="frame" x="31" y="12.5" width="184.5" height="60"/>
                                                             <subviews>
-                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gCL-P8-6El">
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gCL-P8-6El">
                                                                     <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                                                                 </imageView>
-                                                                <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="o2g-ME-vMd">
+                                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="o2g-ME-vMd">
                                                                     <rect key="frame" x="82" y="20" width="102.5" height="20.5"/>
                                                                     <subviews>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Song" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XGO-uo-oyq">
@@ -1061,9 +1060,11 @@
                                                     </subviews>
                                                     <constraints>
                                                         <constraint firstItem="jul-av-s0k" firstAttribute="leading" secondItem="JV1-SG-Wk7" secondAttribute="leadingMargin" constant="11" id="00T-K3-e0g"/>
+                                                        <constraint firstItem="jul-av-s0k" firstAttribute="top" secondItem="JV1-SG-Wk7" secondAttribute="topMargin" constant="1.5" id="1Kx-si-hAi"/>
                                                         <constraint firstAttribute="trailingMargin" secondItem="XxK-WI-Pp9" secondAttribute="trailing" constant="20" id="4Qy-er-PFI"/>
                                                         <constraint firstItem="XxK-WI-Pp9" firstAttribute="centerY" secondItem="JV1-SG-Wk7" secondAttribute="centerY" id="CRR-iV-jhp"/>
                                                         <constraint firstItem="jul-av-s0k" firstAttribute="centerY" secondItem="JV1-SG-Wk7" secondAttribute="centerY" id="LiU-lt-ccS"/>
+                                                        <constraint firstAttribute="trailing" secondItem="jul-av-s0k" secondAttribute="trailing" constant="198.5" id="TY6-Iz-ywz"/>
                                                     </constraints>
                                                 </tableViewCellContentView>
                                             </tableViewCell>
@@ -1530,7 +1531,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="applogo" width="210" height="297"/>
+        <image name="ajitelogo" width="200" height="200"/>
         <image name="background image" width="500" height="889"/>
         <image name="music.note.list" catalog="system" width="128" height="113"/>
         <image name="person.badge.plus" catalog="system" width="128" height="116"/>
